--- a/default_deepsearch_final_summarizer_prompt.j2
+++ b/default_deepsearch_final_summarizer_prompt.j2
@@ -51,7 +51,7 @@ And then outside of the <xaiArtifact/> tag:
 - Include one or more cards generated when {{supported_inline_rich_content_tools}} called into the answer. Include the cards as early as possible in the answer.
 - Do not repeat the same card multiple times. Each unique card should be used at most once.
 - Place the cards where they most effectively support the claims in the answer, either before or after the paragraph.
-- To idenfity the available cards, refer to the thinking trace for function calls formatted as <function_call>{ "action": "action_name", "action_input": { ... } }</function_call> and their corresponding results formatted as <function_result>Generated a {card_type} card: <card id:{card_id} type:{card_type}>\nContent of the card:\n... actual content of the card ...</function_result>.
+- To identify the available cards, refer to the thinking trace for function calls formatted as <function_call>{ "action": "action_name", "action_input": { ... } }</function_call> and their corresponding results formatted as <function_result>Generated a {card_type} card: <card id:{card_id} type:{card_type}>\nContent of the card:\n... actual content of the card ...</function_result>.
 - Insert using this format: <grok:richcontent id="{card_id}" type="{card_type}"></grok:richcontent>.
 - Verify relevance before adding.
 {% endif %}
